--- a/Languages/default-af.xml
+++ b/Languages/default-af.xml
@@ -3016,7 +3016,11 @@
 	<string id="20125" value="Gekontroleer"/>
 	<string id="20126" value="Nie Gekontroleer"/>
 	<string id="20127" value="bron"/>
-	<string id="20128" value="bronne"/>
+	<string id="20128" value="bronne"/> <!-- numbers 21, 31, ... -->
+       <string id="20129" value="bronne"/> <!-- tens -->
+       <string id="20130" value="bronne"/> <!-- from 11 to 19 -->
+       <string id="20131" value="bronne"/> <!-- from 2 to 4 -->
+       <string id="20132" value="bronne"/> <!-- from 5 to 9 -->
 </strings>
 
 <!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
