--- a/trunk/Languages/default-chs.xml
+++ b/trunk/Languages/default-chs.xml
@@ -17,7 +17,7 @@
 </fonts>
 
 <!-- Manifest -->
-<manifest      name="简体中文"
+<manifest      name="&#20013;&#25991;(&#32321;&#39636;)"
                        author="STC"
                        description="Shareaza Chinese(Simplified) Skin File"
                        link="http://www.shareaza.com/"
